bison-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bison-deployment
spec:
  replicas: 1  # Number of instances (pods) to run
  selector:
    matchLabels:
      app: bison
# everything under template is the definition of the pod that will be created.      
  template:
    metadata:
      labels:
        app: bison
    spec:
      containers:
      - name: web-app
        image: waldbaan/bison:latest
        ports:
        - containerPort: 80
