bison-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: bis-lb-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: bison
