brightspace-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: bse-lb-service
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 80
  selector:
    app: brightspace-app
