service.yaml
# nginx-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  selector:
    app: my-container
  ports:
    - protocol: TCP
      port: 80          # Port on the service
      targetPort: 80     # Port on the pod
  type: ClusterIP


## cluster ip: 10.110.1.199
