tutservice.yml
# nginx-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80          # Port on the service
      targetPort: 80     # Port on the pod
      nodePort: 31007    # External port on the Node (choose a port between 30000 and 32767)
  type: NodePort
