bison-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bison-ingress
spec:
  rules:
    - host: iets.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bis-lb-service
                port:
                  number: 8080
