ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: iets.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-container
                port:
                  number: 80
